chore: replace deprecated Java API